Changed Pic and Bio

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,178 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Rounak Nayee
     - name: Date of Birth
-      value: 14th March 1879
+      value: 7th February 1999
     - name: Languages
-      value: English, German
+      value: English, Hindi, Marathi, Gujrathi
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: Master of Science in Computer Science
+      institution: Rutgers University, New Jersey, USA
+      year: September 2022 – December 2023
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - Relevant Coursework: Machine Learning, Artificial Intelligence, Software Engineering, Distributed parallel and cloud computing, Mobile Development.
+    - title: Bachelor of Science in Electronics and Telecommunication Engineering
+      institution: KJ Somaiya College Of Engineering, Mumbai, India
+      year: August 2016 – October 2020
       description:
-        - Description 1.
-        - Description 2.
+        - Relevant Coursework: Cloud Computing, Data structures and Algorithms, Operating Systems and RTOS, OOP, Cryptography, Big Data, Image Processing, Computer Networks.
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Cloud Software Engineer Intern
+      institution: New Jersey Transit, Newark, New Jersey
+      year: June 2023 – present
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - Implemented AWS infrastructure using Terraform and more.
+        - Developed PS Scripts and AWS Lambda Functions.
+        - Partnered with the project manager for effective project management.
+        - Handled AD Management, Datacenter migration, and more.
+    - title: Infrastructure Technology Analyst
+      institution: Wolters Kluwer, Mumbai, India
+      year: October 2020 – July 2022
       description:
-        - Description 1.
-        - Description 2.
+        - Designed and maintained virtual networks and serverless functions on cloud platforms.
+        - Worked on the "journey to cloud" project.
+        - Deployed and patched servers in the European region.
+        - Integrated subscriptions in AWS and Azure for efficient management.
+        - Managed Barracuda WAF and AWS services.
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
+- title: Projects
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    - title: Speakeasy
+      year: Year_Not_Provided
+      description: Designed a Whatsapp Bot for chat conversions using Terraform, AWS, and more.
+    - title: Tech Impact - Volunteer connect
+      year: Year_Not_Provided
+      description: Developed a web application with React JS, Express, and more.
+    - title: Web Portal for Career cell of university
+      year: Year_Not_Provided
+      description: Implemented a Web-based portal using Django MVC Framework and trained NLP models.
+    - title: Autonomous Bot under E-yantra, IIT Bombay
+      year: Year_Not_Provided
+      description: Designed an Autonomous bot using various technologies.
 
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
-      items: 
-        - Max Planck Medal
-
-- title: Academic Interests
+- title: Technical Skills
   type: nested_list
   contents:
-    - title: Topic 1.
-      items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
+    - title: Languages
       items:
-        - Description 1.
-        - Description 2.
+        - C, C++, Java, Python, JavaScript, HTML, CSS.
+    - title: Technologies/Frameworks
+      items:
+        - Django, Flask, GIT, VSCode, Azure, AWS, and more.
 
-- title: Other Interests
+- title: Certifications
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - Azure Cloud Architect (AZ-104)
+    - Azure Fundamentals (AZ-900)
+    - C++ on Udemy
+
+# Assuming there aren't sections for Honors/Awards or Academic Interests based on your provided resume, those are omitted.
+# You can add back if needed.
+
+
+# - title: General Information
+#   type: map
+#   contents:
+#     - name: Full Name
+#       value: Rounak Nayee
+#     - name: Date of Birth
+#       value: 7th February 1999
+#     - name: Languages
+#       value: English, Hindi, Marathi, Gujrathi
+
+# - title: Education
+#   type: time_table
+#   contents:
+#     - title: PhD
+#       institution: University of Zurich, Zurich, Switzerland
+#       year: 1905
+#       description:
+#         - Description 1.
+#         - Description 2.
+#         - title: Description 3.
+#           contents:
+#             - Sub-description 1.
+#             - Sub-description 2.
+#     - title: Federal teaching diploma
+#       institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
+#       year: 1900
+#       description:
+#         - Description 1.
+#         - Description 2.
+
+# - title: Experience
+#   type: time_table
+#   contents:
+#     - title: Professor of Theoretical Physics
+#       institution: Institute for Advanced Study, Princeton University
+#       year: 1933 - 1955
+#       description:
+#         - Description 1.
+#         - Description 2.
+#         - title: Description 3.
+#           contents:
+#             - Sub-description 1.
+#             - Sub-description 2.
+#     - title: Visiting Professor
+#       institution: California Institute of Technology, Pasadena, California, US
+#       year: 1933
+#       description:
+#         - Description 1.
+#         - Description 2.
+
+#     - title: Director
+#       institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
+#       year: 1917-1933
+
+#     - title: Professor of Theoretical Physics
+#       institution: Karl-Ferdinand University, Prague, Czechoslovakia
+#       year: 1911 - 1917
+#       description:
+
+#     - title: Associate Professor of Theoretical Physics
+#       institution: University of Zurich, Zurich, Switzerland
+#       year: 1909 - 1911
+
+# - title: Open Source Projects
+#   type: time_table
+#   contents:
+#     - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
+#       year: 2015-now
+#       description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+
+# - title: Honors and Awards
+#   type: time_table
+#   contents:
+#     - year: 1921
+#       items: 
+#         - Nobel Prize in Physics 
+#         - Matteucci Medal
+#     - year: 2029
+#       items: 
+#         - Max Planck Medal
+
+# - title: Academic Interests
+#   type: nested_list
+#   contents:
+#     - title: Topic 1.
+#       items: 
+#         - Description 1.
+#         - Description 2.
+#     - title: Topic 2.
+#       items:
+#         - Description 1.
+#         - Description 2.
+
+# - title: Other Interests
+#   type: list
+#   contents:
+#     - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
